--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,12 @@
+.likes {
+    display: inline-flex;
+    align-items: center;
+}
+
+.like-icon {
+    padding-right: 5px;
+}
+
 .likes input {
     display: none;
 }
